updated workflow removed cargo build

--- a/.github/oasdiff/.oasdiff-severity-levels.yaml
+++ b/.github/oasdiff/.oasdiff-severity-levels.yaml
@@ -1,7 +1,7 @@
 api-path-removed-without-deprecation: ERR
-api-path-removed-before-sunset: WARN
+api-path-removed-before-sunset: ERR
 api-removed-without-deprecation: ERR
-api-removed-before-sunset: WARN
+api-removed-before-sunset: ERR
 api-operation-id-removed: ERR
 api-tag-removed: WARN
 request-body-became-enum: ERR
@@ -12,12 +12,10 @@ request-body-max-length-increased: INFO
 request-body-min-length-increased: ERR
 request-body-min-length-decreased: INFO
 request-body-type-changed: ERR
-request-discriminator-property-removed: ERR
 request-property-became-not-nullable: ERR
 request-property-became-nullable: INFO
 request-property-became-optional: INFO
 request-property-became-required: ERR
-request-property-became-write-only: ERR
 request-property-default-value-changed: WARN
 request-property-enum-value-removed: ERR
 request-property-enum-value-added: INFO
@@ -34,35 +32,12 @@ request-property-pattern-removed: INFO
 request-property-removed: ERR
 request-property-type-changed: ERR
 request-property-x-extensible-enum-value-removed: ERR
-response-body-became-optional: ERR
-response-body-became-required: INFO
-response-discriminator-property-removed: ERR
 response-header-became-optional: ERR
-response-header-removed: ERR
-response-header-type-changed: ERR
-response-property-became-not-nullable: ERR
-response-property-became-nullable: INFO
-response-property-became-optional: ERR
-response-property-became-required: INFO
-response-property-became-write-only: INFO
 response-property-default-value-changed: WARN
-response-property-enum-value-removed: ERR
 response-property-enum-value-added: INFO
-response-property-max-decreased: ERR
-response-property-max-increased: INFO
-response-property-max-length-decreased: ERR
-response-property-max-length-increased: INFO
-response-property-min-increased: ERR
-response-property-min-decreased: INFO
-response-property-min-length-increased: ERR
-response-property-min-length-decreased: INFO
 response-property-pattern-changed: ERR
 response-property-pattern-removed: INFO
-response-property-removed: ERR
 response-property-type-changed: ERR
-response-removed: ERR
-response-status-removed: ERR
-response-status-updated: WARN
 request-parameter-became-optional: INFO
 request-parameter-became-required: ERR
 request-parameter-default-value-changed: WARN
@@ -78,23 +53,9 @@ request-parameter-min-length-increased: ERR
 request-parameter-min-length-decreased: INFO
 request-parameter-pattern-changed: ERR
 request-parameter-pattern-removed: INFO
-request-parameter-removed: ERR
 request-parameter-type-changed: ERR
 request-parameter-x-extensible-enum-value-removed: ERR
-api-security-removed: ERR
-api-security-updated: WARN
-api-global-security-removed: ERR
-api-global-security-updated: WARN
-api-schema-removed: ERR
-new-required-request-header: ERR
-new-optional-request-header: INFO
+request-parameter-deprecated: WARN
+api-schema-removed: INFO
 endpoint-deprecated: WARN
 endpoint-reactivated: INFO
-sunset-date-too-small: WARN
-payment-amount-field-removed: ERR
-payment-currency-field-removed: ERR
-payment-method-enum-removed: ERR
-connector-enum-removed: WARN
-customer-field-breaking-change: ERR
-api-version-removed: ERR
-api-version-changed: WARN
